Update readme with better discription of run commands

--- a/tests/example-jira/qms_behat_report.html
+++ b/tests/example-jira/qms_behat_report.html
@@ -324,83 +324,12 @@
         
 <div class="feature">
 <ul class="tags">
-<li>@assignee:paul.martin</li>
+<li>@assignee:david.kitchen_commerceguys.com</li>
 </ul>
 <h2>
 <span class="keyword">Feature: </span>
-<span class="title">QMS 94</span>
+<span class="title">something</span>
 </h2>
-<p>
-A a user of the site when I use my one-time only link I want to login automatically so that I can change my password<br />
-</p>
-
-<div class="scenario">
-<h3>
-<span class="keyword">Scenario: </span>
-<span class="title">todo</span>
-<span class="path">https://ikosltd.atlassian.net/browse/QMS-94#:4</span>
-</h3>
-<ol>
-<li class="undefined">
-<div class="step">
-<span class="keyword">Given </span>
-<span class="text">todo</span>
-</div>
-<div class="snippet"><pre>  /**
-   * @Given /^todo$/
-   */
-  public function todo() {
-    throw new PendingException();
-  }</pre></div>
-</li>
-</ol>
-</div>
-</div>
-<div class="feature">
-<ul class="tags">
-<li>@assignee:paul.martin</li>
-</ul>
-<h2>
-<span class="keyword">Feature: </span>
-<span class="title">QMS 93</span>
-</h2>
-<p>
-As a site admin when I approve users I want a one-time only link to be sent out to the registration email address so that the users email address is confirmed<br />
-</p>
-
-<div class="scenario">
-<h3>
-<span class="keyword">Scenario: </span>
-<span class="title">todo</span>
-<span class="path">https://ikosltd.atlassian.net/browse/QMS-93#:4</span>
-</h3>
-<ol>
-<li class="undefined">
-<div class="step">
-<span class="keyword">Given </span>
-<span class="text">todo</span>
-</div>
-<div class="snippet"><pre>  /**
-   * @Given /^todo$/
-   */
-  public function todo() {
-    throw new PendingException();
-  }</pre></div>
-</li>
-</ol>
-</div>
-</div>
-<div class="feature">
-<ul class="tags">
-<li>@assignee:paul.martin</li>
-</ul>
-<h2>
-<span class="keyword">Feature: </span>
-<span class="title">QMS 42</span>
-</h2>
-<p>
-As a site owner I want a content type healthy eating so that healthy eating content can be displayed on my site<br />
-</p>
 
 <div class="scenario">
 <ul class="tags">
@@ -408,45 +337,18 @@ As a site owner I want a content type healthy eating so that healthy eating cont
 </ul>
 <h3>
 <span class="keyword">Scenario: </span>
-<span class="title">Content type "Healthy eating" exists</span>
-<span class="path">https://ikosltd.atlassian.net/browse/QMS-42#:5</span>
+<span class="title">Access homepage</span>
+<span class="path">https://ikosltd.atlassian.net/browse/LUSH-259#:5</span>
 </h3>
 <ol>
-<li class="failed">
-<div class="step">
-<span class="keyword">Given </span>
-<span class="text">I am logged in as a user with the "<strong class="failed_param">administrator</strong>" role</span>
-<span class="path">FeatureContext::assertAuthenticatedByRole()</span>
-</div>
-<pre class="backtrace">[curl] 28: Operation timed out after 30660 milliseconds with 14072 out of -1 bytes received [url] http://qms.localhost/</pre>
-</li>
-<li class="skipped">
-<div class="step">
-<span class="keyword">And </span>
-<span class="text">I visit "<strong class="skipped_param">/admin/structure/types</strong>"</span>
-<span class="path">FeatureContext::assertVisit()</span>
-</div>
-</li>
-<li class="skipped">
-<div class="step">
-<span class="keyword">Then </span>
-<span class="text">I should see "<strong class="skipped_param">Healthy eating (Machine name: healthy_eating)</strong>"</span>
-<span class="path">FeatureContext::assertPageContainsText()</span>
-</div>
-</li>
-</ol>
-</div>
-</div>
-<div class="summary failed">
+<div class="summary passed">
 <div class="counters">
 <p class="scenarios">
-3 scenarios (<strong class="undefined">2 undefined</strong>, <strong class="failed">1 failed</strong>)
-</p>
+No scenarios</p>
 <p class="steps">
-5 steps (<strong class="skipped">2 skipped</strong>, <strong class="undefined">2 undefined</strong>, <strong class="failed">1 failed</strong>)
-</p>
+No steps</p>
 <p class="time">
-0m32.431s
+0m29.048s
 </p>
 </div>
 <div class="switchers">
